Table sorting by number added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="js-container container">
+    <div class="container">
 
         <div class="title">
             <!-- <div class="table-header">
